# HaRoRa-PajaritoEnvironmenta-FromMediaOverloadtoSeamlessOrganization

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  docker-compose.override.yml  docker-compose.release.yml  docker-compose.yml  nginx_conf  play.py  run  run.sh
backend/: DDL.sql  api.py  data_models.py  db.py  download.py  dropbox_integration.py  env.yaml  process.py  pyproject.toml  requirements.txt  search.py  structured_llm_output.py
backend/database/: .local.env  DDL.sql  Dockerfile  data_mocker.py  docker-compose.yml
database/: DDL.sql  Dockerfile  changes_to_db.sql  init-db.sh
docs/: poetry-setup.md
frontend/: Dockerfile  README.md
frontend/canva/: .env
frontend/web_app/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/web_app/src/: App.css  App.jsx  index.css
frontend/web_app/src/api/: api.jsx  backup.jsx
frontend/web_app/src/components/: Navbar.jsx  ProtectedRoute.jsx  Search.jsx  TagEditor.jsx  Upload.jsx
frontend/web_app/src/components/utils/: Reveal.jsx
frontend/web_app/src/pages/: AuthPage.jsx  SearchPage.jsx  UploadPage.jsx
frontend/web_app_2/: Dockerfile  fly.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/web_app_2/src/: App.jsx  HomePage.jsx  api.js  main.jsx
frontend/web_app_2/src/components/: Avatar.jsx  FileUploadModal.jsx  ImageCard.jsx  SearchBar.jsx
frontend/web_app_2/src/icons/: LogoutIcon.jsx  PencilIcon.jsx  UploadIcon.jsx
nginx/dev/: nginx.conf
nginx/release/: Dockerfile  nginx.conf
nginx/release/html/: index.html
