[tool.poetry]
name = "peec-media-backend"
version = "0.1.0"
description = "automates media organization, metadata extraction, and integrates with essential tools for seamless and efficient media management."
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
together = "^1.3.1"
replicate = "^1.0.1"
langchain = "^0.3.3"
dropbox = "^12.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
