[tool.poetry]
name = "peec-media-backend"
version = "0.1.0"
description = "automates media organization, metadata extraction, and integrates with essential tools for seamless and efficient media management."
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
together = "^1.3.1"
replicate = "^1.0.1"
langchain = "^0.3.3"
dropbox = "^12.0.2"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
openai = "^1.51.2"
python-multipart = "^0.0.12"
requests = "^2.32.3"
itsdangerous = "^2.2.0"
pillow = "^10.4.0"
exif = "^1.6.0"
piexif = "^1.1.3"
starlette = "^0.39.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
